@@ -1,5 +1,13 @@
 2007-02-27  P. Henrique Silva  <henrique@astro.ufsc.br>
 
+	* src/chimera/controllers/admin/:
+	* src/chimera/controllers/admin/__init__.py:
+	* src/chimera/controllers/admin/admin.py:
+
+	New.
+
+2007-02-27  P. Henrique Silva  <henrique@astro.ufsc.br>
+
 	* src/chimera/drivers/paramount.py: New.
 
 2007-02-09  P. Henrique Silva  <henrique@astro.ufsc.br>
